fix(backend): migrate time auditing to Instant and resolve unit test failures